# heysync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml  release.yaml
src/heysync/: __init__.py  main.py
tests/: test_heysync.py
