[tool.poetry]
name = "heysync"
version = "1.0.0"
description = "Hey, make async functions and classes sync"
authors = ["oren0e"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[[tool.poetry.source]]
name = "global-pypi"
url = "https://pypi.org/simple"
default = true
secondary = false


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.0"
scriv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 120

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: tool.poetry.version"
