[tool.poetry]
name = "heysync"
version = "1.0.1"
description = "Hey, make async functions and classes sync"
authors = ["oren0e"]
readme = "README.md"
repository = "https://github.com/oren0e/heysync"
homepage = "https://github.com/oren0e/heysync"
keywords = [
    "Async",
    "Async-to-Sync",
    "Utility"
]


[tool.poetry.dependencies]
python = "^3.7"


[[tool.poetry.source]]
name = "global-pypi"
url = "https://pypi.org/simple"
default = true
secondary = false


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.0"
scriv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 120

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: tool.poetry.version"

[tool.pylint]
disable="R,C"
